navbar-brand in public pages now point to the front page. Removed Jinja2 conditional statements from user locations pages that weren't working correctly.Panels in pages featuring maps now scale properly on smaller screens.

--- a/stylesheets/map.css
+++ b/stylesheets/map.css
@@ -9,7 +9,6 @@ html, body, #map-canvas {
   z-index: 5;
   right: 16px;
   bottom: 16px;
-  width: 25%;
   padding: 5px;
   border: 1px solid #999;
 }
